fixed career section text size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ nav svg {
 .hide-mobile-menu {
   animation: BottomToTopAnimation 0.5s ease-in-out;
   height: 0;
+  visibility: hidden !important;
 }
 
 /****************************************** Main *****************************************/
